--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -924,17 +924,17 @@ body::-webkit-scrollbar-thumb {
 .owl-theme .owl-dots .owl-dot span {
     width: 10px;
     height: 5px;
-    background: rgb(var(--primary-color));
+    background: var(--primary-color);
 }
 
 .owl-theme .owl-dots .owl-dot.active span,
 .owl-theme .owl-dots .owl-dot:hover span {
-    background: rgb(var(--primary-color));
+    background: var(--primary-color);
 }
 
 .owl-theme .owl-dots .owl-dot.active span,
 .owl-theme .owl-dots span {
-    background: rgb(var(--primary-color));
+    background: var(--primary-color);
     width: 30px;
     height: 5px;
 }
@@ -1140,6 +1140,44 @@ Reusable style section start
     }
 }
 
+// Responsive language box large start 
+@media(max-width: 767px) {
+    .language-box-large {
+        .dropdown-menu-end[data-bs-popper] {
+            right: -55px;
+        }
+    }
+}
+
+@media(max-width: 575px) {
+    .language-box-large {
+        .region-container {
+            width: 280px;
+        }
+
+        .dropdown-menu {
+            padding: 20px 10px;
+        }
+
+        .region-box-large {
+            width: 50%;
+
+
+            .region-list .item {
+                width: 100%;
+            }
+
+        }
+
+        .region-box-small {
+            width: 50%;
+        }
+
+
+    }
+}
+
+// Responsive language box large end
 // Language box large end
 
 // Cmn box start
@@ -1701,12 +1739,12 @@ Offcanvas end
     text-transform: capitalize;
     font-family: var(--heading-font);
     gap: 5px;
-    border: 1px solid var(--primary-color);
+    border: 1px solid transparent;
 
     &:hover {
         color: var(--white);
         background: var(--btn-hover-bg);
-        border: 1px solid var(--primary-color);
+        border: 1px solid transparent;
     }
 
 }
@@ -3265,38 +3303,6 @@ Payment section end
     display: inline-flex;
     position: relative;
 
-    &::before,
-    &::after {
-        position: absolute;
-        content: "";
-        width: 48px;
-        height: 100%;
-    }
-
-    &::before {
-        left: -32px;
-        -webkit-mask-image: url(../img/pricing-plan/download.svg);
-        mask-image: url(../img/pricing-plan/download.svg);
-        mask-size: auto 100%;
-        -webkit-mask-position: right center;
-        mask-position: right center;
-        -webkit-mask-repeat: no-repeat;
-        mask-repeat: no-repeat;
-        background-color: var(--bg-color2);
-    }
-
-    &::after {
-        right: -32px;
-        -webkit-mask-image: url(../img/pricing-plan/download2.svg);
-        mask-image: url(../img/pricing-plan/download2.svg);
-        mask-size: auto 100%;
-        -webkit-mask-position: right center;
-        mask-position: right center;
-        -webkit-mask-repeat: no-repeat;
-        mask-repeat: no-repeat;
-        background-color: var(--bg-color2);
-    }
-
     .item {
         padding: 12px 70px;
         background-color: var(--bg-color2);
@@ -3312,9 +3318,46 @@ Payment section end
         position: relative;
         border-top-right-radius: 5px;
 
+        &::before,
+        &::after {
+            position: absolute;
+            content: "";
+            width: 48px;
+            height: 100%;
+        }
+
+
+
+
         &:first-child {
             border-top-left-radius: 15px;
             border-top-right-radius: 0;
+
+            &::before {
+                left: -32px;
+                -webkit-mask-image: url(../img/pricing-plan/download.svg);
+                mask-image: url(../img/pricing-plan/download.svg);
+                mask-size: auto 100%;
+                -webkit-mask-position: right center;
+                mask-position: right center;
+                -webkit-mask-repeat: no-repeat;
+                mask-repeat: no-repeat;
+                background-color: var(--bg-color2);
+            }
+        }
+
+        &:last-child {
+            &::after {
+                right: -32px;
+                -webkit-mask-image: url(../img/pricing-plan/download2.svg);
+                mask-image: url(../img/pricing-plan/download2.svg);
+                mask-size: auto 100%;
+                -webkit-mask-position: right center;
+                mask-position: right center;
+                -webkit-mask-repeat: no-repeat;
+                mask-repeat: no-repeat;
+                background-color: var(--bg-color2);
+            }
         }
 
         img {
@@ -3333,6 +3376,18 @@ Payment section end
         &.active {
             background-color: var(--bg-color1);
             color: rgb(var(--heading-color-rgb));
+
+            &:first-child {
+                &::before {
+                    background-color: var(--bg-color1);
+                }
+            }
+
+            &:last-child {
+                &::after {
+                    background-color: var(--bg-color1);
+                }
+            }
 
             .active-img {
                 display: block;
@@ -3359,6 +3414,10 @@ Payment section end
             img {
                 width: 25px;
                 min-width: 25px;
+            }
+
+            &:last-child::after {
+                right: -20px;
             }
         }
     }
@@ -3753,9 +3812,9 @@ Padding bottom
     background-color: transparent;
 }
 
-/*----------------------------------------------
-user nav Profile start
-----------------------------------------------*/
+
+// user nav Profile start
+
 .profile-box {
     position: relative;
     display: inline-block;
@@ -3876,9 +3935,7 @@ user nav Profile start
 }
 
 // Rtl user nav profile end
-/*----------------------------------------------
-user nav Profile end
-----------------------------------------------*/
+// user nav Profile end
 
 
 // Nav responsive start
@@ -3926,6 +3983,25 @@ user nav Profile end
                 gap: 5px;
             }
         }
+    }
+
+}
+
+@media (max-width: 575px) {
+    .navbar {
+        .nav-right {
+            .custom-nav {
+                .nav-item {
+                    .nav-link {
+                        padding: 0;
+                    }
+                }
+            }
+        }
+    }
+
+    .language-box-large .cmn-dropdown-toggle {
+        padding: 0;
     }
 
 }
@@ -4085,7 +4161,7 @@ Feature section end
 05. About section start
 ----------------------------------------------*/
 .about-section {
-    overflow-x: hidden;
+    overflow: hidden;
 
     .container {
         position: relative;
@@ -4115,6 +4191,15 @@ Feature section end
 }
 
 // About responsive start
+@media (max-width: 991px) {
+    .about-section {
+        .container::after {
+            height: calc(100% + 50px);
+            width: calc(100% + 50px);
+        }
+    }
+}
+
 @media (max-width: 767px) {
     .about-section {
         text-align: center;
@@ -4149,7 +4234,7 @@ Chat capabilities end
 Customer satisfaction section start 
 ----------------------------------------------*/
 .customer-satisfaction {
-    overflow-x: hidden;
+    overflow: hidden;
 
     .container {
         position: relative;
@@ -4169,6 +4254,19 @@ Customer satisfaction section start
     }
 }
 
+// Responsive customer statistics section start
+@media(max-width: 991px) {
+    .customer-satisfaction .container::after {
+        height: calc(100% + 50px);
+        width: calc(100% + 50px);
+    }
+}
+
+// Responsive customer statistics section end
+/*----------------------------------------------
+Customer satisfaction section end 
+----------------------------------------------*/
+
 /*----------------------------------------------
 Flexible chat section start
 ----------------------------------------------*/
@@ -4181,8 +4279,8 @@ Flexible chat section start
         background-size: cover;
         background-position: center;
         height: 100%;
-        width: calc(100% - 100px);
-        min-height: 600px;
+        width: calc(100% - 40px);
+        min-height: 450px;
         border-top-right-radius: 100px;
         border-bottom-right-radius: 100px;
         position: relative;
@@ -4210,7 +4308,7 @@ Flexible chat section start
             max-width: 650px;
             margin-left: auto;
             text-align: right;
-            padding-right: 100px;
+            padding-right: 60px;
 
             h2 {
                 color: var(--secondary-color);
@@ -4228,6 +4326,52 @@ Flexible chat section start
     }
 }
 
+// Responsive flexible chat section start
+@media(min-width: 1200px) {
+    .flexible-chat-section {
+        .left-side {
+            min-height: 600px;
+            width: calc(100% - 60px);
+
+            .text-box {
+                padding-right: 100px;
+            }
+        }
+    }
+}
+
+@media(max-width: 767px) {
+    .flexible-chat-section {
+        .right-side {
+            margin: auto;
+            text-align: center;
+        }
+
+        .left-side {
+            border-radius: 30px;
+            width: 100%;
+            min-height: 300px;
+
+            &::after {
+                border-radius: 30px;
+            }
+
+            .text-box {
+                text-align: center;
+                margin: 0 auto;
+                padding-right: 0;
+            }
+
+            .video-play-btn {
+                top: calc(100% - 50px);
+                left: 50%;
+                transform: translateX(-50%);
+            }
+        }
+    }
+}
+
+// Responsive flexible chat section end
 /*----------------------------------------------
 Flexible chat section end 
 ----------------------------------------------*/
@@ -4236,10 +4380,10 @@ Flexible chat section end
 Statisfics section start
 ----------------------------------------------*/
 .statistics-section {
+    overflow: hidden;
 
     .cmn-tab-content {
         position: relative;
-        overflow-x: hidden;
 
         &::after {
             content: "";
@@ -4285,6 +4429,14 @@ Statisfics section start
     margin-top: 20px;
 }
 
+// Responsive statistics section start
+@media(max-width: 767px) {
+    .statistics-section .cmn-tab-content {
+        text-align: center;
+    }
+}
+
+// Responsive statistics section end
 /*----------------------------------------------
 Statisfics section end
 ----------------------------------------------*/
@@ -4572,10 +4724,6 @@ Posts page end
 
 }
 
-.pricing-box:last-child {
-    margin-left: 100px;
-}
-
 .pricing-box:nth-child(-n+2) {
     border-right: 1px solid var(--border-color2);
 }
@@ -4679,9 +4827,13 @@ Posts page end
 }
 
 // Responsive pricing section start
-@media(min-width: 576px) {
+@media(min-width: 768px) {
     .pricing-box {
         max-width: 300px;
+
+        &:last-child {
+            margin-left: 100px;
+        }
     }
 }
 
@@ -4876,10 +5028,13 @@ Business pricing section start
 Business pricing section end
 ----------------------------------------------*/
 
+
 /*----------------------------------------------
 Compare pricing section start
 ----------------------------------------------*/
 .compare-pricing-box {
+
+
     .box-top {
         display: flex;
         position: sticky;
@@ -4888,6 +5043,7 @@ Compare pricing section start
         z-index: 9;
 
         .item {
+            border-bottom: 1px solid var(--border-color1);
 
             .img-box {
                 width: 60px;
@@ -5065,6 +5221,30 @@ Compare pricing section start
         --bs-table-accent-bg: var(--white);
 
     }
+
+    &.enterprise {
+        .box-top {
+            .item {
+                &:first-child {
+                    width: 30%;
+                }
+
+                &:not(:first-child) {
+                    width: 35%;
+                }
+            }
+        }
+
+        .table {
+            td {
+                width: 35%;
+
+                &:first-of-type {
+                    width: 30%;
+                }
+            }
+        }
+    }
 }
 
 // Responsive compare pricing section start
@@ -5115,6 +5295,27 @@ Compare pricing section start
         .table> :not(caption)>*>* {
             background-color: var(--white);
         }
+
+        &.enterprise {
+            .box-top {
+                .item {
+                    &:not(:first-child) {
+                        width: 50%;
+                    }
+                }
+            }
+
+            .table {
+                td {
+                    width: 50%;
+
+                    &:first-of-type {
+                        width: 100%;
+                    }
+                }
+            }
+
+        }
     }
 
 }
@@ -5160,6 +5361,189 @@ Compare pricing section start
 Compare pricing section end
 ----------------------------------------------*/
 
+
+/*----------------------------------------------
+Enterprise pricing section end
+----------------------------------------------*/
+.enterprise-pricing-section {
+    background-color: var(--bg-color1);
+}
+
+.enterprise-pricing-box {
+    display: flex;
+    justify-content: space-between;
+    row-gap: 20px;
+}
+
+.enterprise-pricing-item {
+    padding: 40px;
+    background-color: var(--white);
+    border-radius: 20px;
+
+    h4 {
+        font-size: 22px;
+    }
+
+    &:last-child {
+        .box-top {
+            display: flex;
+            justify-content: space-between;
+
+            .img-box {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                img {
+                    width: 240px;
+                }
+            }
+
+        }
+    }
+
+    .cmn-list {
+        gap: 25px;
+
+        h6 {
+            font-weight: 600;
+        }
+    }
+
+    .price-title {
+        font-size: 40px;
+        font-family: var(--heading-font);
+        font-weight: 600;
+
+        sup {
+            font-size: 16px;
+            top: -18px;
+            left: 8px;
+        }
+
+        small {
+            font-size: 24px;
+            margin-left: -8px;
+        }
+    }
+}
+
+.label-tag {
+    background-color: var(--primary-color-opacity-low);
+    padding: 5px 25px;
+    border-radius: 9999px;
+    font-weight: 600;
+    display: inline-flex;
+    align-items: center;
+    gap: 7px;
+
+    i {
+        color: var(--primary-color);
+    }
+
+    &.pink {
+        background-color: rgba(180, 75, 133, 0.2);
+        color: #b44b85;
+    }
+}
+
+.label-tag-small {
+    background-color: var(--primary-color-opacity-low);
+    padding: 3px 15px;
+    border-radius: 9999px;
+    font-weight: 600;
+    display: inline-flex;
+    align-items: center;
+    gap: 7px;
+    font-size: 12px;
+
+    i {
+        color: var(--primary-color);
+    }
+
+    &.pink {
+        background-color: rgba(180, 75, 133, 0.2);
+        color: #b44b85;
+    }
+}
+
+.customer-list {
+    display: flex;
+    align-items: center;
+    row-gap: 20px;
+    column-gap: 30px;
+    flex-wrap: wrap;
+
+}
+
+.customer-list-item {
+    -webkit-filter: brightness(0) opacity(0.18);
+    filter: brightness(0) opacity(0.18);
+
+    img {
+        width: auto;
+        height: 20px;
+    }
+}
+
+.award-list {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.award-list-item {
+    width: 140px;
+}
+
+// Responsive enterprise pricing section start
+@media(min-width: 768px) {
+    .enterprise-pricing-item:last-child {
+        .box-top {
+            .text-box {
+                width: 50%;
+            }
+
+            .img-box {
+                width: 50%;
+            }
+        }
+    }
+}
+
+@media(min-width: 992px) {
+    .enterprise-pricing-item {
+        &:first-child {
+            width: 36.85%;
+        }
+
+        &:last-child {
+            width: 62.28%;
+        }
+    }
+}
+
+@media(max-width: 991px) {
+    .enterprise-pricing-box {
+        flex-direction: column;
+    }
+}
+
+@media(max-width: 767px) {
+    .enterprise-pricing-item {
+        padding: 20px;
+
+        &:last-child .box-top {
+            flex-direction: column;
+            row-gap: 30px;
+        }
+    }
+}
+
+// Responsive enterprise pricing section end
+/*----------------------------------------------
+Enterprise pricing section end
+----------------------------------------------*/
 
 
 
@@ -5341,11 +5725,22 @@ Faq end
     }
 }
 
+@media(max-width: 1199px) {
+    .testimonial-inner {
+        padding: 20px;
+    }
+}
+
 @media(max-width: 991px) {
     .testimonial-section {
         .section-header {
             text-align: center;
         }
+    }
+}
+@media(max-width: 575px) {
+    .testimonial-inner{
+        padding: 0;
     }
 }
 
@@ -6165,7 +6560,9 @@ Login Signup end
     .blog-box-large {
         .thumbs-area {
             img {
-                border-radius: 5px;
+                border-radius: 10px;
+                max-height: 450px;
+                width: 100%;
             }
         }
 
@@ -6188,7 +6585,6 @@ Login Signup end
     margin: 20px 0;
     position: relative;
     background-color: var(--white);
-    box-shadow: var(--shadow1);
     padding: 25px;
     border-left: 2px solid var(--primary-color);
 
@@ -6236,8 +6632,7 @@ Login Signup end
         padding: 10px 0;
 
         a {
-            font-size: 18px;
-            font-weight: 400;
+            font-weight: 500;
             display: flex;
             justify-content: space-between;
             color: var(--heading-color);
@@ -6286,9 +6681,8 @@ Login Signup end
 .sidebar-widget-area {
     padding: 25px;
     background-color: var(--white);
-    border-radius: 5px;
+    border-radius: 10px;
     margin-bottom: 30px;
-    box-shadow: var(--shadow1);
 
     .title {
         margin-bottom: 5px;
