--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1518,6 +1518,14 @@ Offcanvas end
   border: 1px solid var(--primary-color);
 }
 
+@media (max-width: 991px) {
+  .get-start-btn {
+    margin: 15px 0;
+  }
+  .login-btn {
+    margin: 15px 0;
+  }
+}
 /*----------------------------------------------
 Alerts section start 
 ----------------------------------------------*/
