--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1849,6 +1849,16 @@ Offcanvas end
 
 }
 
+@media(max-width: 991px) {
+    .get-start-btn {
+        margin: 15px 0;
+    }
+
+    .login-btn {
+        margin: 15px 0;
+    }
+}
+
 /*----------------------------------------------
 Alerts section start 
 ----------------------------------------------*/
